aall changes ai